# sitepilot-ai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep  202607120900_001_create_orgs_projects_websites.py  202607121000_002_create_audit_runs.py  202607121100_003_engine_findings_health.py  202607121200_004_recommendations.py  202607121300_005_create_reports.py  202607121400_006_report_hash.py  202607121500_007_ai_generations.py  202607121600_008_ai_generation_jobs.py  202607121700_009_ai_generation_jobs_refine.py  202607121800_010_ai_job_observability.py  202607121900_011_ai_job_expires_at.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: README.md  __init__.py  cache.py  config.py  constants.py  context.py  diagnostics.py  entity_types.py  exceptions.py  factory.py  features.py  gemini_settings.py  generation.py  models.py  openai_settings.py  openrouter_settings.py  prompt_repository.py  provider_capabilities.py  provider_routing.py  registry.py  response.py  schemas.py  service.py  session.py  settings_sources.py  summary_limits.py  telemetry.py  validators.py
apps/api/app/api/: health.py  router.py
apps/api/app/application/: __init__.py  audit_background.py  get_report.py  run_audit.py  share_report.py  start_audit.py
apps/api/app/config/: __init__.py
apps/api/app/core/: config.py  errors.py  logging.py  rate_limit.py  signed_tokens.py  startup.py
apps/api/app/db/: __init__.py  base.py  database.py  (+2 more)
apps/api/tests/: conftest.py  test_health.py
(+588 files in other folders)
