[project]
name = "sitepilot-api"
version = "0.1.0"
description = "SitePilot AI — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.17",
  "httpx[http2]>=0.28.0",
  "h2>=4.1.0",
  "idna>=3.10",
  "tldextract>=5.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
  "openai>=2.45.0",
  "redis>=5.2.0",
  "reportlab>=4.2.0",
  dnspython>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests",
  "app/engines/url_validation/tests",
  "app/engines/crawler/tests",
  "app/engines/parser/tests",
  "app/engines/seo/tests",
  "app/engines/accessibility/tests",
  "app/engines/security/tests",
  "app/engines/performance/tests",
  "app/engines/business/tests",
  "app/engines/health/tests",
  "app/engines/recommendation/tests",
  "app/services/report/tests",
  "app/ai/tests",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
